--- a/Ardoise/app/src/main/res/layout/activity_liste_evenements.xml
+++ b/Ardoise/app/src/main/res/layout/activity_liste_evenements.xml
@@ -8,18 +8,15 @@
     tools:context=".ListeEvenementsActivity">
 
     <ListView
-        android:id="@+id/liste"
         android:layout_width="match_parent"
-        android:layout_height="621dp"
-        android:layout_marginTop="50px" />
+        android:layout_height="621dp" />
 
     <Button
-        android:id="@+id/addButton"
+        android:id="@+id/+"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="105dp"
         android:layout_marginLeft="400px"
         android:layout_marginRight="400px"
         android:background="#009688"
-        android:text="+"
-        android:textSize="36sp" />
+        android:text="+" />
 </LinearLayout>
