--- a/Ardoise/app/src/main/res/layout/activity_ajout_depense.xml
+++ b/Ardoise/app/src/main/res/layout/activity_ajout_depense.xml
@@ -32,6 +32,41 @@
         android:inputType="date"
         tools:hint="Date" />
 
+    <TextView
+        android:id="@+id/payePar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Par qui ?" />
+
+    <Spinner
+        android:id="@+id/payeurList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/pourQui"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Pour qui ?" />
+
+    <Switch
+        android:id="@+id/user1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Switch" />
+
+    <Switch
+        android:id="@+id/user2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Switch" />
+
+    <Switch
+        android:id="@+id/user3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Switch" />
+
     <Button
         android:id="@+id/validerButton"
         android:layout_width="match_parent"
