--- a/Ardoise/app/src/main/res/layout/item_depense.xml
+++ b/Ardoise/app/src/main/res/layout/item_depense.xml
@@ -17,4 +17,10 @@
         android:layout_height="wrap_content"
         android:text="Montant" />
 
+    <TextView
+        android:id="@+id/tvPayeur"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Payeur" />
+
 </LinearLayout>
