--- a/Ardoise/app/src/main/res/layout/activity_ajout_depense.xml
+++ b/Ardoise/app/src/main/res/layout/activity_ajout_depense.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".AjoutDepenseActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:orientation="vertical">
 
 
     <EditText
@@ -14,27 +20,34 @@
         android:layout_marginTop="50px"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Titre de l'evenement" />
+        android:hint="Titre de l'evenement"
+        android:layout_marginVertical="10dp"/>
 
     <EditText
         android:id="@+id/montant"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Montant en €" />
+        android:inputType="number"
+        android:hint="Montant en €"
+        android:layout_marginVertical="10dp" />
 
-    <EditText
+
+    <DatePicker
         android:id="@+id/date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="date"
-        tools:hint="Date" />
+        android:datePickerMode="spinner"
+        android:calendarViewShown="false"
+        android:layout_marginVertical="10dp"/>
 
     <Button
         android:id="@+id/validerButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Valider" />
-</LinearLayout>
+        android:text="Valider"
+        android:layout_marginVertical="10dp"/>
+
+
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
