--- a/Ardoise/app/src/main/res/layout/activity_liste_depenses.xml
+++ b/Ardoise/app/src/main/res/layout/activity_liste_depenses.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListeDepensesActivity">
+    tools:context=".ListeDepensesActivity"
+    android:layout_margin="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,7 +37,8 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
             android:text="@string/solde_total_text"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            android:layout_margin="10dp"/>
 
         <Button
             android:id="@+id/equilibre_button"
