--- a/Ardoise/app/src/main/res/layout/activity_main.xml
+++ b/Ardoise/app/src/main/res/layout/activity_main.xml
@@ -25,10 +25,10 @@
             android:id="@+id/connexion_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp"
             android:ems="10"
-            android:inputType="textPersonName"
             android:hint="@string/connexion_text"
-            android:layout_marginVertical="10dp" />
+            android:inputType="textPersonName" />
 
         <Button
             android:id="@+id/connexion_button"
