--- a/Ardoise/app/src/main/res/layout/activity_ajout_depense.xml
+++ b/Ardoise/app/src/main/res/layout/activity_ajout_depense.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Titre de l'evenement"
+        android:hint="@string/title_add_depenses_text"
         android:layout_marginVertical="10dp"/>
 
     <EditText
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="number"
-        android:hint="Montant en €"
+        android:hint="@string/montant_text"
         android:layout_marginVertical="10dp" />
 
 
@@ -45,7 +45,7 @@
         android:id="@+id/payePar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Par qui ?" />
+        android:text="@string/payeur_text" />
 
     <Spinner
         android:id="@+id/payeurList"
@@ -56,7 +56,7 @@
         android:id="@+id/pourQui"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Pour qui ?" />
+        android:text="@string/to_whom_text" />
 
     <Switch
         android:id="@+id/user1"
@@ -80,7 +80,7 @@
         android:id="@+id/validerButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Valider"
+        android:text="@string/validate_text"
         android:layout_marginVertical="10dp"/>
 
 
