--- a/Ardoise/app/src/main/res/layout/activity_ajout_depense.xml
+++ b/Ardoise/app/src/main/res/layout/activity_ajout_depense.xml
@@ -7,82 +7,89 @@
     android:orientation="vertical"
     tools:context=".AjoutDepenseActivity">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginHorizontal="10dp"
-        android:orientation="vertical"
-        android:isScrollContainer="true">
+        app:layout_constraintBottom_toBottomOf="parent">
 
-
-    <EditText
-        android:id="@+id/titreEvent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Titre de l'evenement"
-        android:layout_marginVertical="10dp"/>
-
-    <EditText
-        android:id="@+id/montant"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="number"
-        android:hint="Montant en €"
-        android:layout_marginVertical="10dp" />
-
-
-        <DatePicker
-            android:id="@+id/date"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:calendarViewShown="false"
-            android:datePickerMode="spinner" />
-
-    <TextView
-        android:id="@+id/payePar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Par qui ?" />
-
-    <Spinner
-        android:id="@+id/payeurList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/pourQui"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Pour qui ?" />
-
-    <Switch
-        android:id="@+id/user1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Switch" />
-
-    <Switch
-        android:id="@+id/user2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Switch" />
-
-    <Switch
-        android:id="@+id/user3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Switch" />
-
-    <Button
-        android:id="@+id/validerButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Valider"
-        android:layout_marginVertical="10dp"/>
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="10dp"
+            android:isScrollContainer="true"
+            android:orientation="vertical">
 
 
-    </LinearLayout>
+            <EditText
+                android:id="@+id/titreEvent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:ems="10"
+                android:hint="Titre de l'evenement"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:id="@+id/montant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:ems="10"
+                android:hint="Montant en €"
+                android:inputType="number" />
+
+
+            <DatePicker
+                android:id="@+id/date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:calendarViewShown="false"
+                android:datePickerMode="spinner" />
+
+            <TextView
+                android:id="@+id/payePar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Par qui ?" />
+
+            <Spinner
+                android:id="@+id/payeurList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/pourQui"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Pour qui ?" />
+
+            <Switch
+                android:id="@+id/user1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Switch" />
+
+            <Switch
+                android:id="@+id/user2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Switch" />
+
+            <Switch
+                android:id="@+id/user3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Switch" />
+
+            <Button
+                android:id="@+id/validerButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:text="Valider" />
+
+
+        </LinearLayout>
+
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
