--- a/Ardoise/app/src/main/res/layout/activity_equilibre.xml
+++ b/Ardoise/app/src/main/res/layout/activity_equilibre.xml
@@ -25,6 +25,16 @@
             android:id="@+id/equilibre_liste"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginVertical="10dp" >
+
+        </ListView>
+
+        <Button
+            android:id="@+id/return_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/return_button_text"
             android:layout_marginVertical="10dp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
